--- a/make.conf
+++ b/make.conf
@@ -10,7 +10,7 @@ MAKEOPTS="-j4"
 PORTAGE_NICENESS=1
 EMERGE_DEFAULT_OPTS="--jobs=4 --load-average=4"
 ACCEPT_KEYWORDS="~AMD64"
-
+ACCEPT_LICENSE="*"
 USE="elogind -systemd -aqua -css -a52 -cjk -gnome -qt4 -ldap -3df \
      -clamav -coreaudio -ios -ipod -iee1394 -emacs -xemacs -gtk -motif \
      -emboss -3dfx -altivec -smartcard -ibm alsa -nls -nas \
