--- a/make.conf
+++ b/make.conf
@@ -1,12 +1,9 @@
-# These settings were set by the catalyst build script that automatically
-# built this stge.
-# Please consult /usr/share/portage/config/make.conf.example for a more
-# detailed example.
+# My custom make.conf
 COMMON_FLAGS="-02 -march=znver2 -pipe"
 CFLAGS="${COMMON_FLAGS}"
 CXXFLAGS="${COMMON_FLAGS}"
 FCFLAGS="${COMMON_FLAGS}"
-MAKEOPTS="-j4"
+MAKEOPTS="-j12"
 PORTAGE_NICENESS=1
 EMERGE_DEFAULT_OPTS="--jobs=4 --load-average=4"
 ACCEPT_KEYWORDS="~AMD64"
