--- a/make.conf
+++ b/make.conf
@@ -5,8 +5,8 @@ CXXFLAGS="${COMMON_FLAGS}"
 FCFLAGS="${COMMON_FLAGS}"
 MAKEOPTS="-j12"
 PORTAGE_NICENESS=1
-EMERGE_DEFAULT_OPTS="--jobs=4 --load-average=4"
-ACCEPT_KEYWORDS="~AMD64"
+#EMERGE_DEFAULT_OPTS="--jobs=4 --load-average=4"
+ACCEPT_KEYWORDS="~amd64"
 ACCEPT_LICENSE="*"
 USE="elogind -systemd -aqua -css -a52 -cjk -gnome -qt4 -ldap -3df \
      -clamav -coreaudio -ios -ipod -iee1394 -emacs -xemacs -gtk -motif \
