--- a/make.conf
+++ b/make.conf
@@ -1,5 +1,5 @@
 # My custom make.conf
-COMMON_FLAGS="-02 -march=znver2 -pipe"
+COMMON_FLAGS="-O2 -march=znver2 -pipe"
 CFLAGS="${COMMON_FLAGS}"
 CXXFLAGS="${COMMON_FLAGS}"
 FCFLAGS="${COMMON_FLAGS}"
